feat(2): Agregando menus y contenedores

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<router-outlet></router-outlet>
+<div class="container-fluit">
+    <div class="row">
+      <div class="col-md">
+        <app-navbar></app-navbar>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-md">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+   </div>
